# 10-herencia-polim-salario-herencia_sparra

Empleados/: CMakeLists.txt
Empleados/src/: Empresa.cpp  Empresa.h  Junior.cpp  Junior.h  Persona.cpp  Persona.h  Senior.cpp  Senior.h  Tecnico.cpp  Tecnico.h  Tester.cpp  Tester.h  UML.md  main.cpp
